# drf-api-permissions-postgres

./: README.md  db.sqlite3  pyproject.toml  requirements.txt
books/: models.py  permissions.py  serializers.py  urls.py  views.py
books/migrations/: 0001_initial.py
library_project/: settings.py  urls.py
